--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Manakamana Glass Fiber | FRP & Fiber Works in Nepal</title>
   <meta name="description" content="Manakamana Glass Fiber specializes in FRP doors, furniture, park items, stadium chairs, boats, tanks, and decorative art across Nepal. Based in Kapilvastu & Butwal.">
-  <style>
+ <meta name="google-site-verification" content="s4ruBDGuMHCOdLtXdczaeuo6H-Y4kSBbHlBj2Br7AR0" />
+ <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
     html {
@@ -405,3 +406,4 @@
 
 </body>
 </html>
+
