--- a/index.html
+++ b/index.html
@@ -401,9 +401,10 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Manakamana Glass Fiber | Designed by manakamana glass fiber</p>
+    <p>&copy; 2025 Manakamana Glass Fiber | Designed by Prashant Nepal</p>
   </footer>
 
 </body>
 </html>
+
 
