--- a/index.html
+++ b/index.html
@@ -1,134 +1,346 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- SEO Title -->
-  <title>Manakamana Glass Fiber | FRP & Fiber Works in Nepal</title>
-
-  <!-- SEO Description -->
-  <meta name="description" content="Manakamana Glass Fiber is a leading FRP manufacturer in Nepal specializing in FRP doors, furniture, boats, tanks, park items, stadium chairs and decorative fiber works." />
-
-  <!-- Canonical Domain -->
-  <link rel="canonical" href="https://manakamanaglassfiber.com.np/" />
-
-  <!-- Favicon / Logo -->
-  <link rel="icon" type="image/png" href="/favicon.png" />
-
-  <!-- Open Graph (Google / Facebook) -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Manakamana Glass Fiber">
-  <meta property="og:description" content="FRP & Glass Fiber Works in Nepal – Doors, Furniture, Boats, Tanks & Decorative Fiber Products.">
-  <meta property="og:url" content="https://manakamanaglassfiber.com.np">
-  <meta property="og:image" content="https://manakamanaglassfiber.com.np/favicon.png">
-  <meta property="og:site_name" content="Manakamana Glass Fiber">
-
-  <!-- Google Verification -->
-  <meta name="google-site-verification" content="11WVXwKGzfrvoNRTaHdYH7qXbX3zU93JSQQ9GgM7454" />
-
-  <!-- Fonts & Styling -->
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
-    html { scroll-behavior: smooth; }
-    body { font-family: 'Poppins', sans-serif; margin: 0; background: #f5f8fa; color: #333; }
-    header { background: linear-gradient(135deg,#004d66,#0099cc); color:#fff; text-align:center; padding:50px 20px; }
-    header img { width:120px; height:120px; border-radius:50%; border:3px solid #fff; }
-    nav { background:#006680; display:flex; justify-content:center; flex-wrap:wrap; }
-    nav a { color:#fff; padding:14px 22px; text-decoration:none; font-weight:600; }
-    nav a:hover { background:#0099cc; }
-    section { padding:60px 20px; max-width:1200px; margin:auto; }
-    h2 { text-align:center; color:#004d66; margin-bottom:40px; }
-    .services,.projects { display:grid; grid-template-columns:repeat(auto-fit,minmax(260px,1fr)); gap:25px; }
-    .service,.project-box { background:#fff; border-radius:15px; padding:25px; box-shadow:0 4px 15px rgba(0,0,0,.1); text-align:center; }
-    .service-icon { font-size:40px; }
-    .projects img { width:100%; height:200px; object-fit:cover; border-radius:15px; }
-    .why-us { background:#e0f7fa; padding:40px; border-radius:15px; }
-    iframe { width:100%; max-width:500px; height:300px; border-radius:15px; border:0; }
-    footer { background:#004d66; color:#fff; text-align:center; padding:20px; }
-  </style>
-</head>
-
-<body>
-
-<header>
-  <img src="logo.jpg" alt="Manakamana Glass Fiber Logo">
-  <h1>Manakamana Glass Fiber</h1>
-  <p>Crafting Excellence in FRP & Glass Fiber Works</p>
+ <html lang="en">
+ <head> <meta charset="UTF-8" /> 
+<meta name="viewport"
+ content="width=device-width, initial-scale=1.0" /> 
+<title>Manakamana Glass Fiber | FRP & Fiber Works in Nepal</title>
+ <meta name="description" content="Manakamana Glass Fiber specializes in FRP doors, furniture, park items, stadium chairs, boats, tanks, and decorative art across Nepal. Based in Kapilvastu & Butwal."> 
+<meta name="google-site-verification" content="11WVXwKGzfrvoNRTaHdYH7qXbX3zU93JSQQ9GgM7454" /> <style>
+ @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+ html { 
+scroll-behavior: smooth;
+ } 
+body { 
+font-family: 'Poppins', sans-serif;
+ margin: 0; 
+padding: 0; 
+background-color: #f5f8fa;
+ color: #333; 
+}
+ header {
+ background: linear-gradient(135deg, #004d66, #0099cc);
+ color: white;
+ text-align: center;
+ padding: 50px 20px; 
+box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2); } 
+header img {
+ width: 120px;
+ height: 120px;
+ border-radius: 50%;
+ border: 3px solid white; 
+margin-bottom: 15px; 
+transition: transform 0.3s ease; } 
+header img:hover {
+ transform: scale(1.08); }
+nav { background-color: #006680; display: flex;
+ justify-content: center; 
+flex-wrap: wrap;
+ box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); }
+nav a {
+ color: white;
+ padding: 14px 22px;
+ text-decoration: none;
+ font-weight: 600; 
+text-transform: uppercase;
+transition: background 0.3s;
+}
+nav a:hover {
+ background-color: #0099cc; 
+}
+ section {
+ padding: 60px 20px; 
+max-width: 1200px;
+ margin: auto; 
+animation: fadeInUp 0.8s ease; }
+ h2 { 
+color: #004d66; 
+text-align: center; 
+margin-bottom: 40px; 
+font-size: 2em;
+ position: relative; }
+h2::after { 
+content: ''; 
+display: block; 
+width: 80px;
+ height: 4px;
+ background: #0099cc;
+ margin: 10px auto 0;
+ border-radius: 2px; }
+/* Services */ 
+.services { 
+display: grid;
+ grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+ gap: 30px;
+ }
+ .service {
+ background-color: white;
+ border-radius: 20px;
+ padding: 30px 20px;
+ text-align: center; 
+box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+ transition: all 0.4s ease;
+ position: relative;
+ overflow: hidden;
+ }
+.service:hover {
+ transform: translateY(-10px); 
+box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15); 
+}
+.service-icon { 
+font-size: 45px;
+ margin-bottom: 15px;
+ color: #0099cc;
+ background: linear-gradient(135deg, #e0f7fa, #b2ebf2); 
+padding: 20px;
+ border-radius: 50%;
+ display: inline-block;
+ transition: transform 0.3s;
+ }
+.service:hover .service-icon {
+ transform: rotate(10deg) scale(1.1);
+ }
+ .service h3 { 
+color: #004d66;
+ font-size: 1.2em;
+ margin-bottom: 10px;
+ }
+.service p { 
+color: #555; 
+font-size: 0.95em;
+ }
+ /* About */
+ #about p { 
+max-width: 900px;
+ margin: auto; 
+text-align: center;
+ font-size: 1em;
+ line-height: 1.7; 
+color: #444;
+ }
+/* Projects */
+ .projects { 
+display: grid; 
+grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+ gap: 25px;
+ justify-content: center; 
+} 
+.project-box { 
+width: 100%;
+ height: 200px;
+ border-radius: 15px; 
+overflow: hidden;
+ box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+ transition: transform 0.3s ease;
+ position: relative; 
+}
+.project-box:hover { 
+transform: scale(1.05);
+ }
+ .projects img { 
+width: 100%; 
+height: 100%; 
+object-fit: cover; 
+border-radius: 15px; 
+}
+ /* Why Us */
+ .why-us {
+ background-color: #e0f7fa;
+ padding: 50px; 
+border-radius: 15px;
+ box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1); 
+}
+.why-us ul { 
+list-style-type: "✨ "; 
+padding-left: 20px;
+ font-size: 1.05em;
+ line-height: 1.8;
+ color: #004d66; 
+} 
+/* Map */
+ .map-container {
+ display: flex;
+ flex-wrap: wrap;
+ justify-content: space-around;
+ gap: 30px;
+ }
+iframe { 
+border: 0;
+ width: 100%;
+ max-width: 500px; 
+height: 300px;
+ border-radius: 15px;
+ }
+ /* Contact */
+ .contact {
+ background-color: #e6f2ff;
+ border-radius: 15px; 
+padding: 30px;
+ text-align: center; 
+box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+ }
+footer { 
+background-color: #004d66; 
+color: white;
+ text-align: center;
+ padding: 20px; 
+font-size: 0.9em;
+ margin-top: 40px;
+ }
+ @keyframes fadeInUp { 
+0% {
+ opacity: 0;
+ transform: translateY(20px);
+ }
+ 100% {
+ opacity: 1;
+ transform: translateY(0);
+ }
+ }
+@media (max-width: 768px) {
+ header img {
+ width: 90px;
+ height: 90px;
+ }
+ }
+ </style>
+ </head>
+ <body> 
+<header> 
+<img src="logo.jpg.jpg" alt="Manakamana Glass Fiber Logo" />
+ <h1>Manakamana Glass Fiber</h1>
+ <p>Crafting Excellence in Fiber, Glass & Structural Design</p> 
 </header>
-
 <nav>
-  <a href="#services">Services</a>
-  <a href="#about">About</a>
-  <a href="#projects">Projects</a>
-  <a href="#whyus">Why Us</a>
-  <a href="#branches">Branches</a>
-  <a href="#contact">Contact</a>
+ <a href="#services">Services</a> 
+<a href="#about">About Us</a>
+ <a href="#projects">Projects</a>
+ <a href="#whyus">Why Choose Us</a> 
+<a href="#branches">Branches</a>
+ <a href="#contact">Contact</a> 
 </nav>
-
-<section id="services">
-  <h2>Our Services</h2>
-  <div class="services">
-    <div class="service"><div class="service-icon">🏫</div><h3>School Furniture</h3></div>
-    <div class="service"><div class="service-icon">🛶</div><h3>Boat Manufacturing</h3></div>
-    <div class="service"><div class="service-icon">🪑</div><h3>Park Items</h3></div>
-    <div class="service"><div class="service-icon">🏟️</div><h3>Stadium Chairs</h3></div>
-    <div class="service"><div class="service-icon">🗑️</div><h3>FRP Dustbins</h3></div>
-    <div class="service"><div class="service-icon">🗿</div><h3>Statues & Art</h3></div>
-    <div class="service"><div class="service-icon">🚪</div><h3>FRP Doors</h3></div>
-    <div class="service"><div class="service-icon">💧</div><h3>Water & Chemical Tanks</h3></div>
-  </div>
-</section>
-
-<section id="about">
-  <h2>About Us</h2>
-  <p>
-    Manakamana Glass Fiber is a proudly Nepali company specializing in durable and innovative FRP products.
-    With branches in Kapilvastu (Imliya) and Butwal (Mainavagar), we serve customers across Nepal.
-  </p>
-</section>
-
-<section id="projects">
-  <h2>Our Projects</h2>
-  <div class="projects">
-    <img src="project1.jpg" alt="FRP Project">
-    <img src="project2.jpg" alt="FRP Project">
-    <img src="project3.jpg" alt="FRP Project">
-    <img src="project4.jpg" alt="FRP Project">
-    <img src="project5.jpg" alt="FRP Project">
-    <img src="project6.jpg" alt="FRP Project">
-    <img src="project7.jpg" alt="FRP Project">
-  </div>
-</section>
-
-<section id="whyus" class="why-us">
-  <h2>Why Choose Us</h2>
-  <ul>
-    <li>Experienced FRP specialists</li>
-    <li>High-quality materials</li>
-    <li>Affordable pricing</li>
-    <li>Trusted across Nepal</li>
-  </ul>
-</section>
-
+ <!-- Services --> 
+<section id="services"> 
+<h2>Our Services</h2> 
+<div class="services"> 
+<div class="service"> 
+<div class="service-icon">🏫</div>
+ <h3>School Furniture</h3> <p>Modern, ergonomic and durable fiber furniture for classrooms and campuses.</p> 
+</div>
+<div class="service">
+ <div class="service-icon">🛶</div>
+ <h3>Boat Manufacturing</h3>
+ <p>Strong, lightweight FRP boats — custom-built for durability, design and performance.</p> 
+</div>
+ <div class="service">
+ <div class="service-icon">🪑</div> 
+<h3>Park Items</h3> 
+<p>Beautiful and long-lasting FRP benches, swings, and play structures for parks and public spaces.</p> 
+</div>
+ <div class="service"> 
+<div class="service-icon">🏟️</div> 
+<h3>Stadium Chairs</h3>
+ <p>Comfortable, weatherproof FRP stadium seating designed for large events and arenas.</p>
+ </div>
+<div class="service">
+ <div class="service-icon">🗑️</div>
+ <h3>Environmental Dustbins</h3>
+ <p>Durable, eco-friendly FRP dustbins for public and industrial waste management.</p>
+ </div>
+ <div class="service">
+ <div class="service-icon">🗿</div>
+ <h3>Statues & Decorative Art</h3>
+ <p>Beautiful handcrafted fiber statues and art pieces built to last generations.</p>
+ </div>
+ <div class="service"> 
+<div class="service-icon">🏠</div>
+ <h3>Home & Office Interiors</h3>
+ <p>Stylish FRP interior design elements — elegant, durable, and modern.</p>
+ </div>
+<div class="service">
+ <div class="service-icon">🚪</div> 
+<h3>FRP Doors & Structures</h3> 
+<p>Weather-resistant, lightweight, and aesthetic FRP doors for all environments.</p>
+ </div>
+ <div class="service">
+ <div class="service-icon">💧</div>
+ <h3>Water & Chemical Tanks</h3>
+ <p>Leak-proof FRP tanks ideal for water, chemical, and industrial storage.</p> 
+</div>
+ </div>
+ </section>
+<!-- About --> 
+<section id="about"> 
+<h2>About Us</h2>
+ <p>
+ Manakamana Glass Fiber is a proudly Nepali company specializing in creative, durable, and innovative glass fiber products. We design and manufacture high-quality FRP structures that combine strength, beauty, and reliability. With two showrooms in <b>Butwal (Mainavagar)</b> and <b>Kapilvastu (Imliya)</b>, we continue to serve homes, schools, and industries across Nepal.
+ </p>
+ </section>
+<!-- Projects -->
+ <section id="projects"> 
+<h2>Our Completed Projects</h2>
+ <p style="text-align:center;">Some of our completed works across Nepal:</p>
+ <div class="projects">
+ <div class="project-box">
+ <img src="project1.jpg.jpg" alt="FRP Doors Project">
+ </div>
+ <div class="project-box">
+ <img src="project2.jpg.jpg" alt="Park Bench Project"> 
+</div>
+ <div class="project-box">
+ <img src="project3.jpg.jpg" alt="Boat Manufacturing Project"> 
+</div>
+ <div class="project-box">
+ <img src="project4.jpg" alt="Dustbin Installation">
+ </div>
+ <div class="project-box">
+ <img src="project5.jpg" alt="Dustbin Installation">
+ </div>
+<div class="project-box"> 
+<img src="project6.jpg" alt="Dustbin Installation">
+ </div>
+ <div class="project-box"> 
+<img src="project7.jpg" alt="Dustbin Installation">
+ </div>
+ </section>
+<!-- Why Choose Us -->
+ <section id="whyus" class="why-us"> 
+<h2>Why Choose Us</h2> 
+<ul>
+ <li>Years of experience and proven craftsmanship.</li>
+ <li>Modern, luxury-grade FRP and glass materials.</li>
+ <li>Affordable pricing with unmatched quality.</li>
+ <li>Timely project delivery and excellent support.</li> 
+<li>Creative designs tailored to your style.</li> 
+<li>Trusted by leading institutions and builders in Nepal.</li>
+ </ul>
+ </section>
+<!-- Branches --> 
 <section id="branches">
-  <h2>Our Branches</h2>
-  <iframe src="https://www.google.com/maps?q=Imliya,+Kapilvastu,+Nepal&output=embed"></iframe>
-  <iframe src="https://www.google.com/maps?q=Mainavagar,+Butwal,+Nepal&output=embed"></iframe>
+ <h2>Our Branches</h2>
+ <div class="map-container">
+ <div> 
+<h3>Head Office - Kapilvastu, Imliya</h3>
+ <iframe src="https://www.google.com/maps?q=Imliya,+Kapilvastu,+Nepal&output=embed">
+</iframe> 
+</div>
+ <div> 
+<h3>Branch Office - Butwal, Mainavagar</h3> 
+<iframe src="https://www.google.com/maps?q=Mainavagar,+Butwal,+Nepal&output=embed">
+</iframe>
+ </div>
+ </div>
+ </section>
+<!-- Contact -->
+ <section id="contact">
+ <h2>Contact Us</h2>
+ <div class="contact"> 
+<p><strong>Phone:</strong> 9857071375 9849275745 </p> 
+<p><strong>Email:</strong> manakamanaglassfiber@gmail.com</p> 
+<p>Visit any of our branches or contact us anytime for inquiries and quotations.</p>
+ </div> 
 </section>
-
-<section id="contact">
-  <h2>Contact Us</h2>
-  <p>📞 9857071375 | 9849275745</p>
-  <p>✉️ manakamanaglassfiber@gmail.com</p>
-</section>
-
-<footer>
-  © 2025 Prashant Nepal | All Rights Reserved
-</footer>
-
-</body>
-</html>
-
-
-
+<footer> 
+<p>&copy; 2025 Manakamana Glass Fiber | Designed by Prashant Nepal</p>
+ </footer>
+ </body>
+ </html>
