--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Manakamana Glass Fiber | FRP & Fiber Works in Nepal</title>
  <meta name="description" content="Manakamana Glass Fiber specializes in FRP doors, furniture, park items, stadium chairs, boats, tanks, and decorative art across Nepal. Based in Kapilvastu & Butwal."> 
 <link rel="canonical" href="https://www.manakamanaglassfiber.com.np/">
-  <meta name="google-site-verification" content="11WVXwKGzfrvoNRTaHdYH7qXbX3zU93JSQQ9GgM7454" /> <style>
+ <meta name="google-site-verification" content="ISjshIAWrfV8beKKimIus9hTiNmr8MGzmc7Oz-v97TQ" />
  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
  html { 
 scroll-behavior: smooth;
@@ -345,4 +345,5 @@ font-size: 0.9em;
  </footer>
  </body>
  </html>
+
 
