--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Manakamana Glass Fiber | FRP & Fiber Works in Nepal</title>
  <meta name="description" content="Manakamana Glass Fiber specializes in FRP doors, furniture, park items, stadium chairs, boats, tanks, and decorative art across Nepal. Based in Kapilvastu & Butwal."> 
  <meta name="google-site-verification" content="ISjshIAWrfV8beKKimIus9hTiNmr8MGzmc7Oz-v97TQ" />
+  <style>
  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
  html { 
 scroll-behavior: smooth;
@@ -17,6 +18,8 @@ padding: 0;
 background-color: #f5f8fa;
  color: #333; 
 }
+   </style>
+ </head>
  header {
  background: linear-gradient(135deg, #004d66, #0099cc);
  color: white;
@@ -344,6 +347,7 @@ font-size: 0.9em;
  </footer>
  </body>
  </html>
+
 
 
 
