--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Manakamana Glass Fiber | FRP & Fiber Works in Nepal</title>
  <meta name="description" content="Manakamana Glass Fiber specializes in FRP doors, furniture, park items, stadium chairs, boats, tanks, and decorative art across Nepal. Based in Kapilvastu & Butwal."> 
  <meta name="google-site-verification" content="ISjshIAWrfV8beKKimIus9hTiNmr8MGzmc7Oz-v97TQ" />
-  <link rel="icon" href="/favicon.png" type="image/png" sizes="192x192">
+  <link rel="icon" type="image/png" href="favicon.png">
   <style>
  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
  html { 
@@ -346,6 +346,7 @@ font-size: 0.9em;
  </footer>
  </body>
  </html>
+
 
 
 
