--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
  content="width=device-width, initial-scale=1.0" /> 
 <title>Manakamana Glass Fiber | FRP & Fiber Works in Nepal</title>
  <meta name="description" content="Manakamana Glass Fiber specializes in FRP doors, furniture, park items, stadium chairs, boats, tanks, and decorative art across Nepal. Based in Kapilvastu & Butwal."> 
- <meta name="google-site-verification" content="ISjshIAWrfV8beKKimIus9hTiNmr8MGzmc7Oz-v97TQ" />
+  <meta name="keywords" content="Manakamana Glass Fiber, FRP Nepal, Fiber Works Nepal, Fiberglass Nepal, FRP doors, fiber statues" />
+  <meta name="author" content="Manakamana Glass Fiber" />
+  <meta name="google-site-verification" content="ISjshIAWrfV8beKKimIus9hTiNmr8MGzmc7Oz-v97TQ" />
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <style>
  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
@@ -346,6 +348,7 @@ font-size: 0.9em;
  </footer>
  </body>
  </html>
+
 
 
 
