--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="Manakamana Glass Fiber" />
   <meta name="google-site-verification" content="ISjshIAWrfV8beKKimIus9hTiNmr8MGzmc7Oz-v97TQ" />
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="canonical" href="https://manakamanaglassfiber.github.io/manakamanaglassfiber/">
   <style>
  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
  html { 
@@ -348,6 +349,7 @@ font-size: 0.9em;
  </footer>
  </body>
  </html>
+
 
 
 
