--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <meta name="keywords" content="Manakamana Glass Fiber, FRP Nepal, Fiber Works Nepal, Fiberglass Nepal, FRP doors, fiber statues" />
   <meta name="author" content="Manakamana Glass Fiber" />
   <meta name="google-site-verification" content="ISjshIAWrfV8beKKimIus9hTiNmr8MGzmc7Oz-v97TQ" />
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
- <link rel="apple-touch-icon" href="/favicon.ico">
-<meta name="theme-color" content="#004d66">  
+ <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="canonical" href="https://manakamanaglassfiber.github.io/manakamanaglassfiber/">
   <style>
  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
@@ -351,6 +349,7 @@ font-size: 0.9em;
  </footer>
  </body>
  </html>
+
 
 
 
